# kingtto

./: .gitignore  README.md  main.py  numbers.csv  pyproject.toml
app/: drawing.py  scraper.py  train_gan.py
app/data/: lotto_one_hot.npy
app/model/: generator.pth
