[project]
name = "lotto-king"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "lxml>=6.0.0",
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "requests>=2.32.4",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]
